redirect, routing lifecycle methods, etc

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "core-decorators": "^0.20.0"
   }
 }
